...
        "Runa Clave Recomendada" to "Runa Essencial Recomendada",
        "Selecciona un campeón para ver sus hechizos de invocador recomendados" to "Selecione um campeão para ver seus feitiços de invocador recomendados",
        "Hechizos & Orden de Habilidades" to "Feitiços e Ordem de Habilidades",
        "Hechizos de Invocador Recomendados" to "Feitiços de Invocador Recomendados",
        "Prioridad de Habilidades" to "Prioridade de Habilidades (Ordem de Evolução)",
        "Maxeo:" to "Maximizar:",
        "Hechizos" to "Feitiços",
        "Runas" to "Runas",
        "Destello" to "Flash",
        "Prender" to "Incendiar (Ignite)",
        "Extenuación" to "Exaustão",
        "Barrera" to "Barreira",
        "Curar" to "Curar",
        "Fantasma" to "Fantasma",
...
        "DAÑO MÁGICO" to "DANO MÁGICO (MAGIC DAMAGE)",
        "DEFENSA" to "DEFESA (DEFENSIVE ITEMS)",
        "SOPORTE" to "SUPORTE (SUPPORT ITEMS)",
        "BOTAS NIVEL 2" to "BOTAS NÍVEL 2 (BOOTS TIER 2)",
        "BOTAS NIVEL 3" to "BOTAS NÍVEL 3 (BOOTS TIER 3)",
        "ENCANTAMIENTOS Y ACTIVOS" to "ENCANTAMENTOS E ATIVOS (ACTIVE ITEMS)",
        "Cuadrícula" to "Grade",
        "Detallado" to "Detalhado",
        "Buscar objeto por nombre o estadísticas..." to "Buscar item por nome ou atributos...",
        "Estadísticas:" to "Atributos:",
        "Efecto / Pasiva:" to "Efeito / Passiva:",
        "Coste:" to "Custo:",
        "Oro" to "Ouro",

...
        "Drafting" to "Drafting",
        "Selección" to "Seleção",
        "Selección de Campeones" to "Seleção de Campeões",
        "Tier List & Campeones" to "Tier List & Campeões",
        "Campeones" to "Campeões",
        "Tier List" to "Tier List",
        "Objetos" to "Itens",
        "Ítems" to "Itens",
        "Ítem" to "Item",
        "Runas" to "Runas",
        "Hechizos" to "Feitiços",
        "Runas & Hechizos" to "Runas & Feitiços",
        "Objetivos" to "Objetivos",
...
        "Se Avecina Tormenta" to "Tempestade Crescente",
        "Botanista" to "Botanista",
        "Hextello" to "Flashtração Hextec",
        "Semillero Ixtalí" to "Sementeira de Ixtal",

        "Runa Clave" to "Runa Essencial",
        "Clave" to "Runa Essencial",
        "Secundaria" to "Secundária",
        "OTRAS RUNAS" to "OUTRAS RUNAS",
        "Dominación" to "Dominação",
        "Precisión" to "Precisão",
        "Valor" to "Determinação",
        "Inspiración" to "Inspiração",
        "Brujería" to "Feitiçaria",
        "Todos" to "Todos",
        "Hechizos" to "Feitiços",
        "Runas Clave" to "Runas Essenciais",

        "Cambiar Rol / Flex Activo:" to "Mudar Função / Flex Ativo:",
        "Toca para alternar" to "Toque para alternar",
        "Análisis Táctico en Wild Rift" to "Análise Tática no Wild Rift",
...
